# optimism-txs-batch-decoder

./: .env.example  Cargo.toml  readme.md
src/: batch.rs  main.rs  manager.rs  transaction_provider.rs
